adds more tests, help and some fixes

--- a/webUI/templates/help.html
+++ b/webUI/templates/help.html
@@ -25,11 +25,12 @@
     von der <a href="https://status.kreativitaet-trifft-technik.de">Status</a> Seite.
 
     <div class="img-responsive screenshot">
-        <img src="assets/images/screenshot.png" class="img-thumbnail" />
+        <img src="assets/images/example.jpg" class="img-thumbnail" />
     </div>
 
     <ul>
-        <li>Mit "Mit Name/Alias anzeigen." wirst du in <span class="legend">A</span> angezeigt.</li>
+        <li>Mit "Alles anzeigen, d.h. Name/Alias und Gerätename." wirst du in <span class="legend">A1</span> und <span class="legend">A2</span> angezeigt.</li>
+        <li>Mit "Mit Name/Alias anzeigen." wirst du nur in <span class="legend">A1</span> angezeigt.</li>
         <li>Mit "Als anonyme Person anzeigen." wirst du in <span class="legend">B</span> angezeigt.</li>
         <li>Wenn du noch gar nichts eingetragen hast oder "Eintrag löschen" gewählt hast, dann wirst du in <span class="legend">C</span> angezeigt.
         </li>
