--- a/webUI/templates/index.html
+++ b/webUI/templates/index.html
@@ -46,7 +46,7 @@
     <div class="alert alert-warning">
         Achtung, deine Mac Adresse wird zufällig generiert. Evt. ändert die sich bei jeder Verbindung.
         <br>
-        Bei Windows 10 kann man das ändern, indem du das Netzwerk "Privat" und "Öffentlich" ist.
+        Bei Windows 10 kann man das ändern, indem du das Netzwerk von "Öffentlich" auf "Privat" stellst.
     </div>
 
 </div>
